--- a/index.html
+++ b/index.html
@@ -1,169 +1,149 @@
-<!-- Primelife Fitness Club Website – Premium UI, Animations, Modern Icons, Better Fonts --><!DOCTYPE html><html lang="en">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primelife Fitness Club</title><!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
-
-<style>
-    body {
-        margin:0;
-        font-family: 'Montserrat', sans-serif;
-        background:#0b0b0b;
-        color:white;
-        overflow-x:hidden;
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PRIMELIFE FITNESS CLUB</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#060606; --card:#0f0f0f; --accent:#d62828; --muted:#bdbdbd;
     }
-
-    /* Smooth Fade Animations */
-    @keyframes fadeIn {
-        from { opacity:0; transform:translateY(20px); }
-        to { opacity:1; transform:translateY(0); }
-    }
-
-    @keyframes zoomIn {
-        from { transform:scale(0.8); opacity:0; }
-        to { transform:scale(1); opacity:1; }
-    }
-
-    header {
-        background:url('https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/890c0bf9f2675a7e0e3fc78a33a5b534.jpg');
-        background-size:cover;
-        background-position:center;
-        height:85vh;
-        display:flex;
-        align-items:center;
-        justify-content:center;
-        text-align:center;
-        animation: fadeIn 1.5s ease-out;
-        box-shadow:0 0 40px black inset;
-    }
-
-    header h1 {
-        font-size:4rem;
-        font-weight:900;
-        text-shadow:4px 4px 12px black;
-        animation: zoomIn 1.2s ease-out;
-    }
-
-    h2 {
-        font-size:2.5rem;
-        margin-bottom:15px;
-        animation: fadeIn 1.5s ease-out;
-    }
-
-    h3 {
-        font-size:1.9rem;
-        margin-bottom:10px;
-    }
-
-    section {
-        padding:45px 20px;
-        text-align:center;
-    }
-
-    /* Service Cards */
-    .service-box {
-        background:#141414;
-        margin:35px auto;
-        padding:25px;
-        border-radius:15px;
-        max-width:900px;
-        box-shadow:0 0 20px #000;
-        transition:0.3s;
-        animation: fadeIn 1.5s ease-out;
-    }
-
-    .service-box:hover {
-        transform:scale(1.04);
-        box-shadow:0 0 25px red;
-    }
-
-    .service-box img {
-        width:100%;
-        border-radius:12px;
-        margin-top:10px;
-        animation: zoomIn 1.2s ease-out;
-    }
-
-    /* Modern Gradient Buttons */
-    a.button {
-        background:linear-gradient(45deg, #ff0000, #ff4d4d);
-        padding:12px 28px;
-        color:white;
-        text-decoration:none;
-        border-radius:10px;
-        font-size:1.2rem;
-        display:inline-block;
-        margin-top:10px;
-        font-weight:bold;
-        letter-spacing:1px;
-        transition:0.3s;
-        box-shadow:0 0 12px red;
-    }
-    a.button:hover {
-        transform:scale(1.1);
-        box-shadow:0 0 20px #ff3333;
-    }
-
-    /* Contact box */
-    .contact-box {
-        background:#181818;
-        padding:28px;
-        border-radius:14px;
-        max-width:650px;
-        margin:20px auto;
-        box-shadow:0 0 15px #000;
-        animation: fadeIn 1.5s ease-out;
-    }
-</style>
-
+    *{box-sizing:border-box}
+    body{margin:0;font-family:'Poppins',sans-serif;background:var(--bg);color:#fff;line-height:1.45}
+    .wrap{max-width:1100px;margin:0 auto;padding:30px}
+    /* Header */
+    header{height:26vh;display:flex;align-items:center;justify-content:center;text-align:center}
+    .brand{font-size:48px;letter-spacing:4px;font-weight:900;
+           background:linear-gradient(180deg,#fff,#bfbfbf);
+           -webkit-background-clip:text;color:transparent;text-shadow:0 6px 30px rgba(255,255,255,0.06)}
+    .sub{color:var(--muted);margin-top:8px;font-weight:500}
+    /* Promo */
+    .promo{display:flex;align-items:center;justify-content:center;gap:12px;margin:18px 0}
+    .badge{background:rgba(214,40,40,0.12);color:var(--accent);padding:8px 14px;border-radius:12px;font-weight:700;border:1px solid rgba(214,40,40,0.18)}
+    /* Services grid (rows) */
+    .service-row{display:flex;gap:28px;align-items:center;margin:26px 0;padding:20px;background:linear-gradient(180deg,rgba(255,255,255,0.01),transparent);border-radius:14px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 6px 30px rgba(0,0,0,0.6)}
+    .service-row:nth-child(even){background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent)}
+    .service-text{flex:1;padding-right:12px}
+    .service-text h3{margin:0 0 8px;font-size:20px;color:var(--accent)}
+    .service-text p{margin:0;color:var(--muted)}
+    .service-img{width:420px;max-width:38%;border-radius:10px;overflow:hidden;flex-shrink:0}
+    .service-img img{display:block;width:100%;height:100%;object-fit:cover;border-radius:10px;filter:brightness(0.98)}
+    /* when image on right we keep HTML order text then image */
+    /* contact card */
+    .contact{margin:38px 0;padding:22px;border-radius:12px;background:#0b0b0b;border:1px solid rgba(255,255,255,0.04);display:flex;flex-direction:column;gap:10px;align-items:center}
+    .contact .meta{color:var(--muted)}
+    .buttons{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:8px}
+    .btn{padding:12px 20px;border-radius:10px;font-weight:700;text-decoration:none}
+    .btn-wh{background:#25D366;color:#06110a}
+    .btn-insta{background:linear-gradient(45deg,#feda75,#d62976);color:#fff}
+    .btn-primary{background:linear-gradient(45deg,#ff1a1a,#b30000);color:#fff}
+    /* subtle animations */
+    @keyframes fadeUp{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:none}}
+    header,.service-row,.contact{animation:fadeUp .9s ease both}
+    /* responsive */
+    @media (max-width:980px){.service-row{flex-direction:column}.service-img{max-width:100%;width:100%}}
+  </style>
 </head>
-<body><header>
-    <h1>PRIMELIFE FITNESS CLUB<br>Opening Soon</h1>
-</header><section>
-    <h2>🔥 First 50 Members – 20% OFF 🔥</h2>
-</section><section>
-    <h2>🏆 Premium Fitness Services</h2><div class="service-box">
-    <h3>💼 Personal Training</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/personal-trainer-1-compressor.jpg" alt="Personal Training">
-</div>
+<body>
+  <div class="wrap">
+    <!-- HEADER -->
+    <header>
+      <div>
+        <div class="brand">PRIMELIFE FITNESS CLUB</div>
+        <div class="sub">Opening Soon • First 50 slots — 20% OFF</div>
+      </div>
+    </header>
 
-<div class="service-box">
-    <h3>🏋️ Strength Training</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/strength-training-health-benefits-1440x810.jpg" alt="Strength Training">
-</div>
+    <!-- PROMO -->
+    <div style="display:flex;justify-content:center">
+      <div class="badge">Limited Offer • Reserve Now</div>
+    </div>
 
-<div class="service-box">
-    <h3>🥗 Diet & Nutrition</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/gym.webp" alt="Nutrition">
-</div>
+    <!-- SERVICES: each row has text left, image right for first five -->
+    <!-- 1) Personal Training (image on RIGHT) -->
+    <div class="service-row" id="svc-personal">
+      <div class="service-text">
+        <h3>Personal Training</h3>
+        <p>One-to-one coaching with personalised plans to reach your goals faster.</p>
+      </div>
+      <div class="service-img">
+        <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/personal-trainer-1-compressor.jpg" alt="Personal Training">
+      </div>
+    </div>
 
-<div class="service-box">
-    <h3>🤸 CrossFit</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/cross-fit-gym-service.jpg" alt="CrossFit">
-</div>
+    <!-- 2) Strength Training (image on RIGHT) -->
+    <div class="service-row" id="svc-strength">
+      <div class="service-text">
+        <h3>Strength Training</h3>
+        <p>Progressive resistance programs, technique coaching and free-weight zones.</p>
+      </div>
+      <div class="service-img">
+        <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/strength-training-health-benefits-1440x810.jpg" alt="Strength Training">
+      </div>
+    </div>
 
-<div class="service-box">
-    <h3>❤️ Cardio Training</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/should-you-do-cardio-before-or-after-weight-training.jpg" alt="Cardio">
-</div>
+    <!-- 3) Diet & Nutrition (image on RIGHT) -->
+    <div class="service-row" id="svc-diet">
+      <div class="service-text">
+        <h3>Diet & Nutrition</h3>
+        <p>Custom diet plans & consultations to support your training and lifestyle.</p>
+      </div>
+      <div class="service-img">
+        <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/gym.webp" alt="Diet and Nutrition">
+      </div>
+    </div>
 
-<div class="service-box">
-    <h3>💪 Weight Training</h3>
-    <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/body-building-workout.jpg" alt="Weight Training">
-</div>
+    <!-- 4) CrossFit (image on RIGHT) -->
+    <div class="service-row" id="svc-crossfit">
+      <div class="service-text">
+        <h3>CrossFit</h3>
+        <p>Functional workouts for stamina, strength and conditioning.</p>
+      </div>
+      <div class="service-img">
+        <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/cross-fit-gym-service.jpg" alt="CrossFit">
+      </div>
+    </div>
 
-</section><section>
-    <h2>📍 Location</h2>
-    <p>1st Floor Lunawat Tower, Bank of Baroda, Igatpuri, 422403</p>
-</section><section>
-    <h2>📞 Contact Us</h2>
-    <div class="contact-box">
-        <p><b>Owner:</b> Shubham Dhakoliya</p>
-        <p><b>Phone:</b> 8149636959</p><a class="button" href="https://wa.me/918149636959">WhatsApp</a><br>
+    <!-- 5) Cardio (image on RIGHT) -->
+    <div class="service-row" id="svc-cardio">
+      <div class="service-text">
+        <h3>Cardio Training</h3>
+        <p>High-energy cardio zones and supervised sessions for fat loss and endurance.</p>
+      </div>
+      <div class="service-img">
+        <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/should-you-do-cardio-before-or-after-weight-training.jpg" alt="Cardio">
+      </div>
+    </div>
 
-    <a class="button" href="https://www.instagram.com/primelife_fitness_club_111?igsh=NXhuaTY1N2xpa3pz">Instagram</a>
-</div>
+    <!-- 6) Weight Training (full width card) -->
+    <div class="service-row" style="flex-direction:column;align-items:flex-start" id="svc-weight">
+      <div style="width:100%">
+        <h3 style="color:var(--accent)">Weight Training</h3>
+        <p style="color:var(--muted)">Structured hypertrophy, strength cycles and technique coaching.</p>
+        <div class="service-img" style="margin-top:14px">
+          <img src="https://raw.githubusercontent.com/GitBuddy14/Primelifegym.github.io/refs/heads/main/body-building-workout.jpg" alt="Weight Training">
+        </div>
+      </div>
+    </div>
 
-</section></body>
+    <!-- LOCATION -->
+    <section>
+      <h3 style="color:var(--accent)">Location</h3>
+      <p style="color:var(--muted)">1st Floor Lunawat Tower, Bank of Baroda, Igatpuri — 422403</p>
+    </section>
+
+    <!-- CONTACT -->
+    <div class="contact">
+      <div class="meta"><strong>Owner:</strong> Shubham Dhakoliya • <strong>Phone:</strong> <a href="tel:+918149636959" style="color:#fff;text-decoration:none">+91 81496 36959</a></div>
+      <div class="buttons">
+        <a class="btn btn-wh" href="https://wa.me/918149636959" target="_blank" rel="noopener">Message on WhatsApp</a>
+        <a class="btn btn-insta" href="https://www.instagram.com/primelife_fitness_club_111?igsh=NXhuaTY1N2xpa3pz" target="_blank" rel="noopener">Instagram</a>
+        <a class="btn btn-primary" href="https://www.google.com/maps/search/?api=1&query=1st+Floor+Lunawat+Tower+Bank+of+Baroda+Igatpuri+422403" target="_blank" rel="noopener">Open in Maps</a>
+      </div>
+    </div>
+
+    <footer style="text-align:center;color:var(--muted);margin:28px 0">PRIMELIFE FITNESS CLUB • © 2025</footer>
+  </div>
+</body>
 </html>
