--- a/index.html
+++ b/index.html
@@ -126,6 +126,64 @@
         </div>
       </div>
     </div>
+    <!-- MEMBERSHIP FEES -->
+<section class="service-row" style="flex-direction:column;align-items:center;text-align:center">
+  <h3 style="color:var(--accent);margin-bottom:14px">Membership Plans</h3>
+
+  <div style="width:100%;max-width:700px">
+    <table style="width:100%;border-collapse:collapse;color:#fff">
+      <tr style="background:#0b0b0b">
+        <th style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Duration</th>
+        <th style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Fees</th>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">1 Month</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">₹799</td>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">3 Months</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">₹2,199</td>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">6 Months</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">₹4,199</td>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">1 Year</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">₹8,199</td>
+      </tr>
+    </table>
+  </div>
+
+  <p style="margin-top:14px;color:var(--accent);font-weight:700">
+    ⚡ Offer valid for First 50 Slots Only <br>
+    Hurry Up! Limited Seats Available
+  </p>
+</section>
+    <!-- GYM TIMINGS -->
+<section class="service-row" style="flex-direction:column;align-items:center;text-align:center">
+  <h3 style="color:var(--accent);margin-bottom:14px">Gym Timings</h3>
+
+  <div style="width:100%;max-width:700px">
+    <table style="width:100%;border-collapse:collapse;color:#fff">
+      <tr style="background:#0b0b0b">
+        <th style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Category</th>
+        <th style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Morning</th>
+        <th style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Evening</th>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Male</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">6:00 AM – 10:00 AM</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">5:00 PM – 10:00 PM</td>
+      </tr>
+      <tr>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">Female</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">10:00 AM – 11:00 AM</td>
+        <td style="padding:12px;border:1px solid rgba(255,255,255,0.08)">4:00 PM – 5:00 PM</td>
+      </tr>
+    </table>
+  </div>
+</section>
 
     <!-- LOCATION -->
     <section>
